force-app/main/default/objects/LinkedIn_Information__c/LinkedIn_Information__c.object-meta.xml
<CustomObject>
    <label>LinkedIn_Information</label>
    <nameField>
        <label>LinkedIn Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LinkedIn_Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>