force-app/main/default/objects/LinkedIn_Information__c/fields/AuthResponse__c.field-meta.xml
<CustomField>
    <fullName>AuthResponse__c</fullName>
    <label>Authresponse</label>
    <length>96000</length>
    <type>Html</type>
</CustomField>