force-app/main/default/objects/LinkedIn_Information__c/fields/LinkedIn_code__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_code__c</fullName>
    <label>LinkedIn code</label>
    <type>TextArea</type>
</CustomField>